# AskGenie

./: README.md  chat_history.json  pyproject.toml
src/askgenie/: __init__.py  askgenie.py
