[project]
name = "askgenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Hammad", email = "hafizhammad1883@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.16",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
askgenie = "askgenie:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
